# task1

./: .gitignore  Dockerfile  build.sh  readme.md  run.sh
src/: CMakeLists.txt  IEncoder.h  main.cpp  tlv.cpp  tlv.h  tlvEncoder.cpp  tlvEncoder.h  tlvProcessor.cpp  tlvProcessor.h  tlv_test.cpp
src/cmake/: FindAPR.cmake
src/data/: input
